<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".NotaCoffeeshop">

    <TextView
        android:id="@+id/tvCust"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nama_cust_default"
        android:textSize="18sp"
        android:textStyle="bold"
         />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="#000000"
        app:layout_constraintTop_toBottomOf="@id/tvCust"/>

    <TextView
        android:id="@+id/lblItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/item"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/lblJml"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <TextView
        android:id="@+id/lblJml"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/jumlah"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/lblSub"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/lblItem"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <TextView
        android:id="@+id/lblSub"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/harga"
        android:textAlignment="viewEnd"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1.5"
        app:layout_constraintStart_toEndOf="@+id/lblJml"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <TextView
        android:id="@+id/tvItem1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/daftar_item_default"
        app:layout_constraintEnd_toEndOf="@+id/lblItem"
        app:layout_constraintStart_toStartOf="@+id/lblItem"
        app:layout_constraintTop_toBottomOf="@+id/lblItem" />

    <TextView
        android:id="@+id/tvJml1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/satu"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/lblJml"
        app:layout_constraintStart_toStartOf="@+id/lblJml"
        app:layout_constraintTop_toBottomOf="@+id/lblItem" />

    <TextView
        android:id="@+id/tvSubTotal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/rp_0"
        android:textAlignment="viewEnd"
        app:layout_constraintEnd_toEndOf="@+id/lblSub"
        app:layout_constraintStart_toStartOf="@+id/lblSub"
        app:layout_constraintTop_toBottomOf="@+id/lblItem" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="#000000"
        app:layout_constraintTop_toBottomOf="@id/tvItem1"/>

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/total_rp_0"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider2" />

</androidx.constraintlayout.widget.ConstraintLayout>